crates/context-macro/tests/constraints/missing_token_pogram.fail.stderr
error: One constraint requires including the `Program<TokenProgram>` account.
  --> tests/constraints/missing_token_pogram.fail.rs:20:1
   |
20 | pub struct InitContext {
   | ^^^
